feat: setup & data addition & mvp scaffold
